# auth-service-backend

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  compose.override.yml  compose.yml  test.sh
.github/workflows/: prod.yml
.sqlx/: query-5fd110d5daa57c11c4184cfa5810bababe265235add8ba37fa1a94dd683a486a.json  query-7b4b5b818b40cb78c177f05e13b277ef76102c1214c6280073f3a7e8a94ba4ef.json  query-cced6e45ba8fe85a54df16675c569428c4126622d62eec3ebf495f54cc3302e2.json
src/: app_state.rs  lib.rs  main.rs
src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
src/routes/: delete_account.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
src/utils/: auth.rs  constants.rs  tracing.rs
tests/api/: delete_account.rs  helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
