[package]
  edition = "2021"
  name = "auth-service"
  version = "0.1.1"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  argon2 = { version = "0.5.3", features = ["std"] }
  async-trait = "0.1.80"
  axum = "0.7.4"
  axum-extra = { version = "0.9.2", features = ["cookie"] }
  chrono = "0.4.35"
  dotenv = "0.15.0"
  jsonwebtoken = "9.2.0"
  lazy_static = "1.4.0"
  rand = "0.8.5"
  redis = { version = "0.25.4", features = ["tokio-comp"] }
  regex = "1.10.4"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  sqlx = { version = "0.7.4", features = [
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
  ] }
  tokio = { version = "1.36", features = ["full"] }
  tower-http = { version = "0.5.0", features = ["cors", "fs"] }
  uuid = { version = "1.7.0", features = ["serde", "v4"] }
  validator = "0.16.1"

[dev-dependencies]
  reqwest = { version = "0.12.4", default-features = false, features = [
    "cookies",
    "json",
  ] }
